objects/SAP_Order_Sites__c.object
<CustomObject>
    <description>holds the site commitment info for orders</description>
    <label>PKI Order Sites</label>
    <nameField>
        <label>PKI Order Sites Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PKI Order Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>idoc__c</fullName>
        <inlineHelpText>the idoc that provided this data</inlineHelpText>
        <label>idoc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <inlineHelpText>the site name code</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ext_site_id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Order number-site name used as unique value for syncing</inlineHelpText>
        <label>ext site id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <inlineHelpText>the order number as text</inlineHelpText>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Order_Summary__c</fullName>
        <label>PKI Order Summary</label>
        <referenceTo>SAP_Order_Summary__c</referenceTo>
        <relationshipLabel>PKI Order Sites</relationshipLabel>
        <relationshipName>PKI_Order_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Estimate_Date__c</fullName>
        <label>Current Estimate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Estimate_Date__c</fullName>
        <label>Original Estimate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Last_Modified_Date__c</fullName>
        <inlineHelpText>the date we have from SAP as last modified</inlineHelpText>
        <label>SAP Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transit_to_Consolidation__c</fullName>
        <label>Transit to Consolidation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Global_Delivery_Date__c</fullName>
        <label>Early Global Delivery Date</label>
        <type>Date</type>
    </fields>
</CustomObject>